--- a/PackmanApp/res/values/strings.xml
+++ b/PackmanApp/res/values/strings.xml
@@ -3,9 +3,7 @@
 
     <string name="app_name">Packman</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">View All Packages</string>
-    <string name="title_section2">Add Package</string>
-    <string name="title_section3">Remove Package</string>
+    <string name="section_title">View All Packages</string>
     <string name="login">Login</string>
     <string name="cancel">Cancel</string>
     <string name="username">Username</string>
