--- a/PackmanApp/res/values/strings.xml
+++ b/PackmanApp/res/values/strings.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Packman</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_logout">Logout</string>
     <string name="section_title">View All Packages</string>
     <string name="login">Login</string>
     <string name="cancel">Cancel</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login_message">Please Login</string>
-
 </resources>
