show appropriate toasts when the user interacts with the app

--- a/PackmanApp/res/values/strings.xml
+++ b/PackmanApp/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="cancel">Cancel</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="login_message">Please Login</string>
+    <string name="logout_successful">Logout Successful!</string>
+    <string name="data_refresh">Data refrshed!</string>
+    <string name="login_successful">Login Successful!</string>
+    
 </resources>
