--- a/PackmanApp/res/values/strings.xml
+++ b/PackmanApp/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="logout_successful">Logout Successful!</string>
     <string name="data_refresh">Data refreshed!</string>
     <string name="login_successful">Login Successful!</string>
+    <string name="notification">Login Successful!</string>
 </resources>
