--- a/PackmanApp/res/values/strings.xml
+++ b/PackmanApp/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="login_successful">Login Successful!</string>
     <string name="polling_enabled">Package Polling Enabled</string>
     <string name="polling_disabled">Package Polling Disabled</string>
+    <string name="delete">Delete</string>
+    <string name="confirm_delete">Are you sure you want to delete this package?</string>
+    <string name="delete_confirmation">Package deleted successfully!</string>
 </resources>
